aKregator ChangeLog
===================
(c) 2004 the aKregator authors.

Changes after 1.0b2:
-----------------------------

New Features:


Bug Fixes:

#82618 - Don't crash if there's no kpart available -tpr

Changes from 1.0b1 to 1.0b2:
-----------------------------


New Features:

       - Add Search bar for searching text in articles
       - Clicking on a folder will show articles of all subitems
       - Feed images are stored and aren't fetched every time
       - Show progress while loading feed list
       - Make all shortcuts configurable
       - Gray out feed icons while fetching
       - Add context menus to the article and page readers
       - Add unread count to try icon
#81993 - Save splitter sizes on exit
#82004 - Next Unread in feed menu
#82005 - Link title in article viewer to article link
#82166 - Use ctrl-w to close tabs
#82084 - Middle click in article list opens article link in tab
#82095 - Show homepage in feed list context menu
#82189 - Option to fetch all at startup
       - Middleclick on viewer opens now an external browser
#82138 - Add context menu to the tabs with close and detach entries

Bug Fixes:

       - Favicon fetching works for sites that have never been viewed
       - Make opening large OPML lists much faster
       - Reset feed icon on fetch if it error-ed
       - Fix memory leak in adding feeds
       - Update unread count after deleting a feed
       - Don't write article archive upon reading a read article
#81965 - "When viewing story right clicking a feed crashes"
#81966 - Fix the fact that sub-folder fetch fetched all siblings
#81968 - Import feed list not enabling save
#81978 - Fix favicon updating after fetch errors
#81993 - Make splitters more sane
#81994 - Fix duplicates articles listed in some feeds
#81998 - Crash when folder selected and clicking in list view
#81999 - Dragging in feeds view doesn't active save action
#82000 - Duplicates found in feeds when they should not be
#82002 - Save auto fetch interval